Added a basic textbased home page for the capstone project

--- a/client/capstone.ejs
+++ b/client/capstone.ejs
@@ -2,14 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="./css/App.css"></link>
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link rel="stylesheet" href="./css/Capstone.css"></link>
         <title>Darwin Yang</title>
     </head>
 
     <body>
-        <div id="body-container">
-            <div id=<%= page %>></div>
-        </div>
+        <div id="root"></div>
     </body>
 
     <script src="bundle.js"></script>
